syntax = "proto3";

package near.custom.v1;

message BlockMeta {
  uint64 block_height = 2;
  uint64 block_timestamp = 3;
  string block_hash = 4;
  string author_account_id = 5;
  uint64 approvals = 6;
}

message TransactionMeta {
  uint64 block_timestamp = 1;
  uint64 block_height = 2;
  string tx_hash = 3;
  string signer_id = 4;
  uint64 nonce = 5;
  string receiver_id = 6;
  string receipt_id = 8;
}

message ReceiptActionMeta {
  uint64 block_timestamp = 1;
  uint64 block_height = 2;
  string receipt_id = 3;
  string predecessor_id = 4;
  string receiver_id = 5;
  string action_kind = 6;
  uint64 action_index = 7;
  string method_name = 8;
  string args = 9;
  string social_kind = 10;
  uint32 gas = 11;
  double deposit = 12;
  double stake = 13;
  string status = 14;
}

// General block data output
message BlockDataOutput {
  BlockMeta block = 1;
  repeated TransactionMeta transactions = 2;
  repeated ReceiptActionMeta receipt_actions = 3;
}